--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -21,7 +21,7 @@
             android:id="@+id/toolbarTextMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="start"
             android:fontFamily="@font/notosans_bold"
             android:text="전체"
             android:textColor="@color/black"
@@ -31,145 +31,161 @@
 
     </com.google.android.material.appbar.MaterialToolbar>
 
-    <TextView
-        android:id="@+id/textNameMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/notosans_bold"
-        android:text="홍길동"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toStartOf="@+id/textUserCheckMenu"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarMenu" />
-
-    <TextView
-        android:id="@+id/textUserCheckMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:text="미인증"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toEndOf="@+id/textNameMenu"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarMenu" />
-
-    <TextView
-        android:id="@+id/textAddressMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/notosans_semibold"
-        android:text="마제마을 송촌 파인힐 104동 806호"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/textNameMenu"
-        app:layout_constraintTop_toBottomOf="@+id/textUserCheckMenu" />
-
-    <ImageView
-        android:id="@+id/imageMyPageMenu"
-        android:layout_width="38dp"
-        android:layout_height="42dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/icon_next"
-        app:layout_constraintBottom_toBottomOf="@+id/textAddressMenu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textNameMenu" />
-
-    <LinearLayout
-        android:id="@+id/LinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textAddressMenu">
-
-        <LinearLayout
-            android:id="@+id/LinearWriteMenu"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageWriteMenu"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:layout_marginTop="4dp"
-                android:src="@drawable/icon_writeletter" />
-
-            <TextView
-                android:id="@+id/textWriteMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/notosans_semibold"
-                android:gravity="center"
-                android:text="내가쓴글" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/LinearReservationMenu"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageReservationMenu"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:src="@drawable/icon_reservation" />
-
-            <TextView
-                android:id="@+id/textReservationMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/notosans_semibold"
-                android:gravity="center"
-                android:text="예약내역" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/LinearContactMenu"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageServiceMenu"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:src="@drawable/icon_customer_service" />
-
-            <TextView
-                android:id="@+id/textServiceMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/notosans_semibold"
-                android:gravity="center"
-                android:text="고객센터" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/LinearLayout" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/divider"
+        app:layout_constraintTop_toBottomOf="@id/toolbarMenu"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textNameMenu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="20dp"
+                            android:fontFamily="@font/notosans_bold"
+                            android:text="홍길동"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                        <TextView
+                            android:id="@+id/textUserCheckMenu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="20dp"
+                            android:text="미인증"
+                            android:textColor="@color/gray"
+                            app:layout_constraintStart_toEndOf="@+id/textNameMenu" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/textAddressMenu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:fontFamily="@font/notosans_semibold"
+                        android:text="마제마을 송촌 파인힐 104동 806호"
+                        android:textColor="@color/gray" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/mypageMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageMyPageMenu"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:layout_gravity="center|end"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/icon_next" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/LinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/LinearWriteMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageWriteMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="32dp"
+                        android:layout_marginTop="4dp"
+                        android:src="@drawable/icon_writeletter" />
+
+                    <TextView
+                        android:id="@+id/textWriteMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosans_semibold"
+                        android:gravity="center"
+                        android:text="내가쓴글" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/LinearReservationMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageReservationMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:src="@drawable/icon_reservation" />
+
+                    <TextView
+                        android:id="@+id/textReservationMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosans_semibold"
+                        android:gravity="center"
+                        android:text="예약내역" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/LinearContactMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageServiceMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:src="@drawable/icon_customer_service" />
+
+                    <TextView
+                        android:id="@+id/textServiceMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosans_semibold"
+                        android:gravity="center"
+                        android:text="고객센터" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_marginTop="5dp" />
 
             <TextView
                 android:id="@+id/textExtra"
